--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="u2022">\u2022</string>
     <string name="website">Website</string>
     <string name="episodes">Episodes</string>
+    <string name="watchlist">Watchlist</string>
 </resources>
